# Stack-Python

./: anim_test.py  animations.py  assets_loader.py  audio.py  board.py  constants.py  crane.py  e_javap.txt  g_javap.txt  game.py  highscores.json  highscores.py  i_javap.txt  j_javap.txt  l_javap.txt  main.py  player.py  pyproject.toml  renderer.py  stack_attack_roadmap.md  state.py  test_gameplay.py
assets/: bang.mmf  boxland.mmf  cranedrp.mmf  extra.mid  fullrow.mid  gameover.mid  gameplay_1.mid  gameplay_2.mid  gameplay_3.mid  gameplay_4.mid  gameplay_5.mid  jump.mmf  ouch.mmf  tick.mmf  title.mid
assets/StackAttack2/: de  en  es  pl  pt
assets/jetpack-joyride-revived.ttf/: license.txt  readme.txt
assets/sounds/: bang.mid  boxland.mid  cranedrp.mid  jump.mid  ouch.mid  tick.mid
scratch/: capture_fixed.py  capture_font_screens.py  check_char_sizes.py  check_font_console.py  check_font_extended.py  check_font_glyphs.py  convert_mmf.py  convert_to_ogg.py  fix_main.py  gen_sounds.py  generate_game_music.py  inspect_mmf.py  restore.py  test_collision.py  test_gameplay.py  test_sounds.py
